--- a/Stocky.Client/Components/DialogWindows/PocketDialogs/CreatePocketDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/PocketDialogs/CreatePocketDialog.razor
@@ -1,6 +1,7 @@
 @using System.Net
 @using System.Net.Http.Headers
 @using Append.Blazor.Printing
+@using MudBlazor.Components.Layout
 @using MudBlazor.Components.Service
 @using QRCoder
 @using Stocky.Shared.Models
@@ -10,6 +11,7 @@
 @inject IPrintingService PrintingService
 @inject IConfiguration Configuration
 @inject IDialogService DialogService
+@layout NoNavbar
 
 <MudDialog>
     <DialogContent>
